# PassHub

./: Cargo.toml  README.md  output.json  token.txt
.github/workflows/: rust.yml
screenshots/: Ablauf.vsdx
src/: api.rs  logik.rs  main.rs  view.rs
src/delete/: api.rs  logik.rs  view.rs
src/login/: api.rs  logik.rs  view.rs
src/logout/: api.rs
src/menue/: api.rs  logik.rs  view.rs
src/password_display/: api.rs  logik.rs
src/register/: api.rs  logik.rs  view.rs
src/url_check/: api.rs  logik.rs  view.rs
