[package]
name = "passhub_for_rspass"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
directories = "5.0"
log = "0.4"
env_logger = "0.10"
url = "2.5.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
argon2 = "0.5.3"
rand = "0.8.5"
rand_core = "0.6.4"
serde_json = "1.0.133"
regex = "1.11.1"
