[package]
name = "passhub_for_rspass"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
directories = "6.0"
log = "0.4"
env_logger = "0.11"
url = "2.5.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
argon2 = "0.5.3"
rand = "0.9.0"
rand_core = "0.6.4"
serde_json = "1.0.139"
serde = {version = "1.0.216", features = ["derive"] }
regex = "1.11.1"
zeroize = {version = "1.8.1", features = ["derive"] }
hex = "0.4.3"
base64 = "0.22.1"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
derive_setters = "0.1.6"
copypasta = "0.10.1"
lazy_static = "1.5.0"
